Added today's Forum and a Note

--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,4 @@ Presentaciones sobre Voto Electronico/Camara de Diputados (2016)/Plenario de com
 Presentaciones sobre Voto Electronico/Camara de Diputados (2016)/Plenario de comisiones sobre reforma electoral - Leonardo Martinez.mp4
 Presentaciones sobre Voto Electronico/VotAr Una Mala Eleccion - EkoParty 11 (2015)/Vot.Ar - una mala eleccion en Ekoparty 11 (resumen tecnico).mp4
 Presentaciones sobre Voto Electronico/VotAr Una Mala Eleccion - EkoParty 11 (2015)/Vot.Ar - una mala eleccion - Ivan Ariel Barrera Oro & Javier Smaldone (completo).mp4
-
+Presentaciones sobre Voto Electronico/Foro Abierto Mitos y Verdades sobre el Voto Electronico/Foro Abierto (completo).mp4
